# c2ba-graphics-cpp-sdk

./: .clang-format  .gitignore  CMakeLists.txt  README.md  TODO.md
apps/sample-app/: main.cpp
build-scripts/: build_third_party.cmake  build_third_party_vs_2017_win64.bat  clang_format.bat  clang_format.cmake  clean.bat  generate_solution_vs_2017_win64.bat
build-scripts/cmake/: Vcpkg3rdParty.cmake
libs/c2ba/include/c2ba/glutils/: debug_output.hpp  shaders.hpp
libs/c2ba/include/c2ba/math/: freefly_camera.hpp
libs/c2ba/include/c2ba/utils/: filesystem.hpp
libs/c2ba/include/c2ba/window_manager/: window_manager.hpp
libs/c2ba/src/glutils/: gl_debug_output.cpp
libs/c2ba/src/math/: freefly_camera.cpp
libs/c2ba/src/window_manager/: window_manager.cpp
